kubernetes/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dollyapi-deployment
spec:
  replicas: 1 # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: dollyapi
  template:
    metadata:
      labels:
        app: dollyapi
    spec:
      containers:
        - name: dollyapi-container
          image: comprcompr/arash:latest # Use your Docker image name has to have tag name sorry 
          resources:
          ports:
            - containerPort: 8000 # Use the internal port of your application
          volumeMounts:
            - name: model-data
              mountPath: "/model" # the volume will be presend as /model inside the ctr
      volumes:
        - name: model-data
          persistentVolumeClaim:
            claimName: my-model-pv # my model PV will be here
