kubernetes/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dollyapi-service
spec:
  selector:
    app: dollyapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000 # Expose the container's internal port
