kubernetes/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dollyapi-ingress
spec:
  rules:
    - host: dollyapi-service.default.svc.cluster.local # lets update this instead forwarding
      http:
        paths:
          - path: /generate
            pathType: Prefix
            backend:
              service:
                name: dollyapi-service
                port:
                  number: 80
